<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_marginLeft="@dimen/margin_left"
    android:orientation="horizontal" >

    <View
        android:layout_width="0.5px"
        android:layout_height="fill_parent"
        android:background="#B8B8B8"
        android:visibility="visible" />

    <TextView
        android:id="@+id/artScore"
        android:layout_width="100dip"
        android:layout_height="55dip"
        android:text="@string/art_score"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <View
        android:layout_width="0.5px"
        android:layout_height="fill_parent"
        android:background="#B8B8B8"
        android:visibility="visible" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:text="@string/art_title1"
        android:textColor="#000000"
        android:textSize="17sp" />

    <View
        android:layout_width="0.5px"
        android:layout_height="fill_parent"
        android:background="#B8B8B8"
        android:visibility="visible" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:text="@string/art_title2"
        android:textColor="#000000"
        android:textSize="17sp" />

    <View
        android:layout_width="0.5px"
        android:layout_height="fill_parent"
        android:background="#B8B8B8"
        android:visibility="visible" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:text="@string/art_title3"
        android:textColor="#000000"
        android:textSize="20sp" />

    <View
        android:layout_width="0.5px"
        android:layout_height="fill_parent"
        android:background="#B8B8B8"
        android:visibility="visible" />

</LinearLayout>