<!-- 舞蹈打分界面布局 -->
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@drawable/bg_score"
    tools:context=".LalaScore" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/role"
                android:textSize="@dimen/title_text_size" />
            
            <TextView
                android:id="@+id/role_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/role"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/role"
                android:text=""
                android:textSize="@dimen/title_text_size" />
            
            <TextView
                android:id="@+id/state_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textSize="@dimen/title_text_size" />
            
            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/state_content"
                android:layout_alignTop="@+id/state_content"
                android:text="@string/state"
                android:textSize="@dimen/title_text_size" />            
            
            <View
                android:id="@+id/line"
                android:layout_width="fill_parent"
                android:layout_height="4dp"
                android:layout_marginTop="80dp"
                android:background="#FFFFFF" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/units_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="30dp"
                android:text="@string/units_name"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/units_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/units_name"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/units_name"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/units_name"
                android:layout_below="@+id/units_name"
                android:layout_marginTop="60dp"
                android:text="@string/category_name"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/category_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/category_name"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/category_name"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imp_textView"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/imp_textView"
                android:digits="@string/digits"
                android:ems="3"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textSize="35sp" >
            </EditText>

            <Button
                android:id="@+id/send"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imp_textView"
                android:layout_marginLeft="60dp"
                android:layout_toRightOf="@+id/score"
                android:text="@string/button" />

            <TextView
                android:id="@+id/imp_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/category_name"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="70dp"
                android:layout_toRightOf="@+id/category_name"
                android:text="@string/imp_score"
                android:textSize="35sp" />

        </RelativeLayout>

    </LinearLayout>

</HorizontalScrollView>